name:          roles
category:      Data
version:       0.2.1.0
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett, Matt Noonan
maintainer:    Matt Noonan <matt.noonan@gmail.com>
stability:     provisional
homepage:      http://github.com/matt-noonan/roles/
bug-reports:   http://github.com/matt-noonan/roles/issues
copyright:     Copyright (C) 2017 Matt Noonan, (C) 2014 Edward A. Kmett
synopsis:      Composable class-based roles
description:   Classes for expressing roles of type arguments
build-type:    Simple
extra-source-files:
  .vim.custom
  CHANGELOG.markdown
  README.md
tested-with:   GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.4, GHC == 8.8.4,
               GHC == 8.10.7, GHC == 9.0.2, GHC == 9.2.6, GHC == 9.4.4, GHC == 9.6.1

source-repository head
  type: git
  location: git://github.com/matt-noonan/roles.git

library
  default-language: Haskell98
  build-depends:    base >= 4.8 && < 5
                  , containers

  exposed-modules:  Data.Roles

  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: src
